# atsamd

./: crates.json
hal/: Cargo.toml
pac/atsamd20e/: Cargo.toml  device.x
pac/atsamd20e/src/: adc.rs  lib.rs  sercom0.rs  sysctrl.rs
pac/atsamd20e/src/ac/: compctrl.rs  ctrla.rs  evctrl.rs  scaler.rs  statusb.rs  statusc.rs  winctrl.rs
pac/atsamd20e/src/adc/: avgctrl.rs  calib.rs  ctrlb.rs  evctrl.rs  inputctrl.rs  intenclr.rs  intenset.rs  intflag.rs  refctrl.rs  result.rs  sampctrl.rs  swtrig.rs  winctrl.rs
pac/atsamd20e/src/dac/: ctrla.rs  ctrlb.rs  data.rs  databuf.rs  evctrl.rs  intenclr.rs  intenset.rs  intflag.rs  status.rs
pac/atsamd20e/src/dsu/: ctrl.rs  dcc.rs  dcfg.rs  did.rs  statusa.rs  statusb.rs
pac/atsamd20e/src/eic/: config.rs  ctrl.rs  evctrl.rs  intenclr.rs  intenset.rs  intflag.rs  nmictrl.rs  status.rs  wakeup.rs
pac/atsamd20e/src/evsys/: channel.rs  chstatus.rs  ctrl.rs  intenclr.rs  intenset.rs  intflag.rs  user.rs
pac/atsamd20e/src/gclk/: clkctrl.rs  ctrl.rs  genctrl.rs  gendiv.rs
pac/atsamd20e/src/nvmctrl/: addr.rs  ctrla.rs  ctrlb.rs  intenclr.rs  intenset.rs  intflag.rs  lock.rs  param.rs  status.rs
pac/atsamd20e/src/pac0/: wpclr.rs  wpset.rs
pac/atsamd20e/src/pm/: ahbmask.rs  apbamask.rs  apbasel.rs  apbbmask.rs  apbbsel.rs  apbcmask.rs  apbcsel.rs  cpusel.rs  ctrl.rs  intflag.rs  rcause.rs  sleep.rs
pac/atsamd20e/src/port/: ctrl.rs  dir.rs  dirclr.rs  dirset.rs  dirtgl.rs  in_.rs  out.rs  outclr.rs  outset.rs  outtgl.rs  pincfg0_.rs  pmux0_.rs  wrconfig.rs
pac/atsamd20e/src/sercom0/: i2cm.rs  i2cs.rs  spi.rs  usart.rs
(+119 files in other folders)
